Added some unit tests covered all modules

--- a/buildSystem/android_shared.gradle
+++ b/buildSystem/android_shared.gradle
@@ -25,5 +25,5 @@ dependencies {
     kapt AndroidArchitectureComponentsDependencies.lifecycleCompiler
 
     // Unit test
-    androidTestImplementation AndroidTestDependencies.values()
+    testImplementation AndroidTestDependencies.values()
 }
