Setup Robolectric testing environment and test Main Activity

--- a/buildSystem/android_shared.gradle
+++ b/buildSystem/android_shared.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     // Unit test
     testImplementation AndroidTestDependencies.values()
+    kaptTest ApplicationAnnotationDependencies.daggerCompiler
 }
