--- a/buildSystem/android_environment.gradle
+++ b/buildSystem/android_environment.gradle
@@ -16,6 +16,15 @@ android {
         }
     }
 
+    testOptions {
+        animationsDisabled = true
+
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
