--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,8 +1,7 @@
 ext {
 
     kotlin_version = '1.3.21'
-    google_service = '27.0.0'
-    dagger_version = '2.18'
+    google_service = '27.1.0'
     retrofit_version = '2.4.0'
     lifecycle_version = '1.1.1'
     coroutines_version = '1.1.1'
@@ -14,15 +13,14 @@ ext {
     mockito_version = "2.24.5"
     robolectric_version = "3.8"
     picasso_version = "2.71828"
+    koin_version = "2.1.6"
 
     ApplicationImplementationDependencies = [
-            kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}",
-            dagger    : "com.google.dagger:dagger:${dagger_version}",
-    ]
-
-    ApplicationAnnotationDependencies = [
-            daggerCompiler: "com.google.dagger:dagger-compiler:${dagger_version}",
+            kotlin       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            coroutines   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}",
+            koinCore     : "org.koin:koin-core:${koin_version}",
+            koinAndroid  : "org.koin:koin-android:${koin_version}",
+            KoinViewModel: "org.koin:koin-android-viewmodel:${koin_version}"
     ]
 
     AndroidDependencies = [
@@ -50,7 +48,8 @@ ext {
             kotlinTest   : "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version",
             mockitoKotlin: "com.nhaarman:mockito-kotlin:$mockito_kotlin_version",
             mockito      : "org.mockito:mockito-inline:$mockito_version",
-            coreTesting  : "android.arch.core:core-testing:$lifecycle_version"
+            coreTesting  : "android.arch.core:core-testing:$lifecycle_version",
+            koinTest     : "org.koin:koin-test:${koin_version}"
     ]
 
     AndroidTestDependencies = [
@@ -65,11 +64,6 @@ ext {
             roomRuntime        : "android.arch.persistence.room:runtime:$lifecycle_version",
             roomCompiler       : "android.arch.persistence.room:compiler:$lifecycle_version",
             roomRxJava         : "android.arch.persistence.room:rxjava2:$lifecycle_version"
-    ]
-
-    DaggerAndroid = [
-            daggerAndroidProcessor: "com.google.dagger:dagger-android-processor:$dagger_version",
-            daggerSupport         : "com.google.dagger:dagger-android-support:$dagger_version"
     ]
 
     DebugDependencies = [
