--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,11 @@
 ext {
 
-    kotlin_version = '1.3.21'
+    kotlin_version = '1.5.31'
     google_service = '27.0.0'
     dagger_version = '2.18'
     retrofit_version = '2.4.0'
     lifecycle_version = '1.1.1'
+    room_version = '2.3.0'
     coroutines_version = '1.1.1'
     okhttp_version = '3.11.0'
     gson_version = '2.8.5'
@@ -56,15 +57,15 @@ ext {
     AndroidTestDependencies = [
             androidTestRunner: "com.android.support.test:runner:$test_runner_version",
             robolectric      : "org.robolectric:robolectric:$robolectric_version",
-            coreTesting      : "android.arch.core:core-testing:$lifecycle_version"
+            coreTesting      : "android.arch.core:core-testing:$lifecycle_version",
+            roomTest         : "androidx.room:room-testing:$room_version"
     ]
 
     AndroidArchitectureComponentsDependencies = [
             lifecycleExtensions: "android.arch.lifecycle:extensions:$lifecycle_version",
             lifecycleCompiler  : "android.arch.lifecycle:compiler:$lifecycle_version",
-            roomRuntime        : "android.arch.persistence.room:runtime:$lifecycle_version",
-            roomCompiler       : "android.arch.persistence.room:compiler:$lifecycle_version",
-            roomRxJava         : "android.arch.persistence.room:rxjava2:$lifecycle_version"
+            roomKtx            : "androidx.room:room-ktx:$room_version",
+            roomCompiler       : "androidx.room:room-compiler:$room_version",
     ]
 
     DaggerAndroid = [
