Replaced DI tools by Hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,5 +14,6 @@ dependencies {
 
     implementation project(':domain')
     implementation project(':data')
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
 
