--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,22 +4,30 @@ ext {
     google_service = '27.0.0'
     dagger_version = '2.18'
     retrofit_version = '2.4.0'
-    lifecycle_version = '1.1.1'
+    lifecycle_version = '2.4.1'
     room_version = '2.3.0'
-    coroutines_version = '1.1.1'
+    coroutines_version = '1.6.0'
     okhttp_version = '3.11.0'
     gson_version = '2.8.5'
     junit_version = '4.12'
-    test_runner_version = '1.0.2'
+    test_runner_version = '1.4.0'
     mockito_kotlin_version = '1.6.0'
     mockito_version = "2.24.5"
     robolectric_version = "3.8"
-    picasso_version = "2.71828"
+    picasso_version = "2.8"
+    hilt_version = "2.40"
+    gradle_version = "7.1.2"
+    appcompat_version = "1.4.1"
+    android_legacy_support = "1.0.0"
+    material_version = "1.5.0"
+    arch_version = "2.1.0"
+    lifecycle_extension_version = "2.2.0"
+    activity_version = "1.4.0"
 
     ApplicationImplementationDependencies = [
             kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutines_version}",
-            dagger    : "com.google.dagger:dagger:${dagger_version}",
+            coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version",
+            dagger    : "com.google.dagger:dagger:$dagger_version",
     ]
 
     ApplicationAnnotationDependencies = [
@@ -27,13 +35,14 @@ ext {
     ]
 
     AndroidDependencies = [
-            appcompat        : "com.android.support:appcompat-v7:$google_service",
-            v4support        : "com.android.support:support-v4:$google_service",
+            appcompat        : "androidx.appcompat:appcompat:$appcompat_version",
+            activityKtx      : "androidx.activity:activity-ktx:$activity_version",
+            v4support        : "androidx.legacy:legacy-support-v4:$android_legacy_support",
             coroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     ]
 
     AndroidUiDependencies = [
-            designsupport: "com.android.support:design:$google_service",
+            designsupport: "com.google.android.material:material:$material_version",
             picasso      : "com.squareup.picasso:picasso:$picasso_version"
     ]
 
@@ -51,26 +60,28 @@ ext {
             kotlinTest   : "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version",
             mockitoKotlin: "com.nhaarman:mockito-kotlin:$mockito_kotlin_version",
             mockito      : "org.mockito:mockito-inline:$mockito_version",
-            coreTesting  : "android.arch.core:core-testing:$lifecycle_version"
+            coreTesting  : "androidx.arch.core:core-testing:$arch_version"
     ]
 
     AndroidTestDependencies = [
-            androidTestRunner: "com.android.support.test:runner:$test_runner_version",
+            androidTestRunner: "androidx.test:runner:$test_runner_version",
             robolectric      : "org.robolectric:robolectric:$robolectric_version",
-            coreTesting      : "android.arch.core:core-testing:$lifecycle_version",
+            coreTesting      : "androidx.arch.core:core-testing:$arch_version",
             roomTest         : "androidx.room:room-testing:$room_version"
     ]
 
     AndroidArchitectureComponentsDependencies = [
-            lifecycleExtensions: "android.arch.lifecycle:extensions:$lifecycle_version",
-            lifecycleCompiler  : "android.arch.lifecycle:compiler:$lifecycle_version",
+            lifecycleExtensions: "androidx.lifecycle:lifecycle-extensions:$lifecycle_extension_version",
+            lifecycleCompiler  : "androidx.lifecycle:lifecycle-compiler:$lifecycle_version",
             roomKtx            : "androidx.room:room-ktx:$room_version",
             roomCompiler       : "androidx.room:room-compiler:$room_version",
     ]
 
-    DaggerAndroid = [
+    DIAndroid = [
             daggerAndroidProcessor: "com.google.dagger:dagger-android-processor:$dagger_version",
-            daggerSupport         : "com.google.dagger:dagger-android-support:$dagger_version"
+            daggerSupport         : "com.google.dagger:dagger-android-support:$dagger_version",
+            hiltAndroid           : "com.google.dagger:hilt-android:$hilt_version",
+            hiltCompiler          : "com.google.dagger:hilt-android-compiler:$hilt_version"
     ]
 
     DebugDependencies = [
