--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,16 @@ android {
     defaultConfig {
         applicationId "com.dandv.spike"
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+        useIR = true
+    }
+    composeOptions{
+        kotlinCompilerExtensionVersion "1.1.1"
+    }
+    buildFeatures {
+        compose true
+    }
 }
 
 dependencies {
@@ -15,5 +25,6 @@ dependencies {
     implementation project(':domain')
     implementation project(':data')
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
 
