--- a/buildSystem/android_shared.gradle
+++ b/buildSystem/android_shared.gradle
@@ -2,7 +2,7 @@
  * Common configuration for all modules
  */
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 apply plugin: 'dagger.hilt.android.plugin'
 apply from: "${rootDir}/buildsystem/project_shared.gradle"
 apply from: "${rootDir}/buildsystem/android_environment.gradle"
